add some layout

--- a/_index.html
+++ b/_index.html
@@ -1,49 +1,3 @@
- <!-- Header start -->
- <header class="header">
-     <div class="container header__container">
-         <!-- Main nav -->
-         <a href="./index.html" class="webstudio-logo webstudio-logo__head webstudio-logo--dark">
-             <span class="webstudio-logo__prefix">Web</span>Studio
-         </a>
-
-         <button class="button button__burger-menu js-open-menu" type="button" aria-expanded="false"
-             aria-controls="mobile-menu">
-             <svg class="burger-menu__icon">
-                 <use href="./images/icons.svg#icon-btn-menu"></use>
-             </svg>
-         </button>
-
-         <div class="nav__wrapper">
-             <nav class="header__nav">
-                 <ul class="nav">
-                     <li class="nav__item"><a href="./index.html" class="nav__link nav__link--current">Студия</a></li>
-                     <li class="nav__item"><a href="./portfolio.html" class="nav__link">Портфолио</a></li>
-                     <li class="nav__item"><a href="#" class="nav__link">Контакты</a></li>
-                 </ul>
-             </nav>
-             <ul class="contacts">
-                 <li class="contacts__item contacts__item--header">
-                     <a href="mailto:info@devstudio.com" class="contacts__link">
-                         <svg class="contacts__icon">
-                             <use href="./images/icons.svg#icon-small-icon-envelope"></use>
-                         </svg>
-                         info@devstudio.com
-                     </a>
-                 </li>
-                 <li class="contacts__item contacts__item--header">
-                     <a href="tel:+380961111111" class="contacts__link">
-                         <svg class="contacts__icon">
-                             <use href="./images/icons.svg#icon-small-icon-smartphone"></use>
-                         </svg>
-                         +38 096 111 11 11
-                     </a>
-                 </li>
-             </ul>
-         </div>
-     </div>
- </header>
- <!-- Header end -->
-
   <!-- Form on backdrop -->
   <div class="backdrop-container is-hidden" data-modal>
       <div class="overlay">
@@ -150,7 +104,7 @@
   <main class="main">
       <!-- hero start -->
       <section class="page-section page-section__hero page-section--dark">
-          <div class="container">
+          <div class="container container__hero">
               <h1 class="page-section__hero-title">Эффективные решения для вашего бизнеса</h1>
               <button class="button button__primary" type="button" data-modal-open>Заказать услугу</button>
           </div>
