--- a/index.html
+++ b/index.html
@@ -78,7 +78,425 @@
     </section>
     <!-- hero end -->
 
+    <!-- peculiarities start -->
+    <section class="page-section page-section__peculiarities">
+      <div class="container">
+        <h2 class="page-section__title visually-hidden">Особенности работы</h2>
 
+        <ul class="peculiarities">
+          <li class="peculiarities__item">
+            <div class="peculiarities__icon-card">
+              <svg class="peculiarities__icon">
+                <use href="./images/icons.svg#icon-peculiarities-antena"></use>
+              </svg>
+            </div>
+            <div class="peculiarities__info">
+              <h3 class="peculiarities__title">Внимание к деталям</h3>
+              <p class="peculiarities__description">Идейные соображения, а также начало повседневной работы по
+                формированию позиции.</p>
+            </div>
+          </li>
+
+          <li class="peculiarities__item">
+            <div class="peculiarities__icon-card">
+              <svg class="peculiarities__icon clock">
+                <use href="./images/icons.svg#icon-peculiarities-clock"></use>
+              </svg>
+            </div>
+            <div class="peculiarities__info">
+              <h3 class="peculiarities__title">Пунктуальность</h3>
+              <p class="peculiarities__description">
+                Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+              </p>
+            </div>
+          </li>
+
+          <li class="peculiarities__item">
+            <div class="peculiarities__icon-card">
+              <svg class="peculiarities__icon diagram">
+                <use href="./images/icons.svg#icon-peculiarities-diagram"></use>
+              </svg>
+            </div>
+            <div class="peculiarities__info">
+              <h3 class="peculiarities__title">Планирование</h3>
+              <p class="peculiarities__description">
+                Равным образом консультация с широким активом в значительной степени обуславливает.
+              </p>
+            </div>
+          </li>
+
+          <li class="peculiarities__item">
+            <div class="peculiarities__icon-card">
+              <svg class="peculiarities__icon astronaut">
+                <use href="./images/icons.svg#icon-peculiarities-astronaut"></use>
+              </svg>
+            </div>
+            <div class="peculiarities__info">
+              <h3 class="peculiarities__title">Современные технологии</h3>
+              <p class="peculiarities__description">
+                Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+              </p>
+            </div>
+          </li>
+        </ul>
+
+      </div>
+    </section>
+    <!-- peculiarities end -->
+
+    <!-- our-work start -->
+    <section class="page-section page-section__our-works">
+      <div class="container">
+
+        <h2 class="page-section__title">Чем мы занимаемся</h2>
+
+        <ul class="our-works">
+
+          <li class="our-works__item">
+
+            <a href="#" class="our-works__link">
+
+              <img class="our-works__link-img" src="./images/our-work/working-process_370x294.jpg"
+                alt="Человек печатает на клавиатуре" width="370" />
+
+              <span class="our-works__link-text">Десктопные приложения</span>
+            </a>
+
+          </li>
+
+          <li class="our-works__item">
+            <a href="#" class="our-works__link">
+              <img class="our-works__link-img" src="./images/our-work/ui-ux-designing_370x294.jpg"
+                alt="Человек рассматривает мокапы интерфейса" width="370" />
+              <span class="our-works__link-text">Мобильные приложения</span>
+            </a>
+          </li>
+          <li class="our-works__item">
+            <a href="#" class="our-works__link">
+              <img class="our-works__link-img" src="./images/our-work/color-picking_370x294.jpg"
+                alt="На планшете цветовая палитра" width="370" />
+              <span class="our-works__link-text">Дизайнерские решения</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- our-work end -->
+
+    <!-- our-team start -->
+    <section class="page-section page-section__our-team page-section--darker">
+      <div class="container">
+        <h2 class="page-section__title">Наша команда</h2>
+
+        <ul class="our-team">
+
+          <!-- first -->
+
+          <li class="our-team__item">
+
+            <figure class="team-member">
+              <img class="team-member__img" src="./images/our-team/igor-demyanenko_product-designer_270x260.jpg"
+                alt="Игорь Демьяненко" width="270" height="260" />
+
+              <figcaption class="team-member__info">
+
+                <h3 class="team-member__name">Игорь Демьяненко</h3>
+
+                <p class="team-member__position">Product Designer</p>
+
+                <ul class="team-member-socials">
+                  <li class="team-member-socials__item">
+
+                    <a href="#" class="social-link">
+                      <span class="visually-hidden">instagram</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-instagram"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">twitter</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-twitter"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">facebook</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-facebook"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">linkedin</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                </ul>
+              </figcaption>
+
+            </figure>
+
+          </li>
+
+          <!-- second -->
+
+          <li class="our-team__item">
+            <figure class="team-member">
+              <img class="team-member__img" src="./images/our-team/olga-repina_frontend-developer_270x260.jpg"
+                alt="Ольга Репина" width="270" height="260" />
+
+              <figcaption class="team-member__info">
+
+                <h3 class="team-member__name">Ольга Репина</h3>
+
+                <p class="team-member__position">Frontend Developer</p>
+
+                <ul class="team-member-socials">
+
+                  <li class="team-member-socials__item">
+
+                    <a href="#" class="social-link">
+                      <span class="visually-hidden">instagram</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-instagram"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">twitter</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-twitter"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">facebook</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-facebook"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">linkedin</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                </ul>
+
+              </figcaption>
+
+            </figure>
+
+          </li>
+
+          <!-- third -->
+
+          <li class="our-team__item">
+            <figure class="team-member">
+              <img class="team-member__img" src="./images/our-team/nikolay-tarasov_marketing_270x260.jpg"
+                alt="Николай Тарасов" width="270" height="260" />
+
+              <figcaption class="team-member__info">
+
+                <h3 class="team-member__name">Николай Тарасов</h3>
+
+                <p class="team-member__position">Marketing</p>
+
+                <ul class="team-member-socials">
+                  <li class="team-member-socials__item">
+
+                    <a href="#" class="social-link">
+                      <span class="visually-hidden">instagram</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-instagram"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">twitter</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-twitter"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-socials__item">
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">facebook</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-facebook"></use>
+                      </svg>
+                    </a>
+                  </li>
+                  <li class="team-member-socials__item">
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">linkedin</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
+                      </svg>
+                    </a>
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+          </li>
+
+          <!-- fourth -->
+
+          <li class="our-team__item">
+            <figure class="team-member">
+              <img class="team-member__img" src="./images/our-team/mykhail-ermakov_ui-designer_270x260.jpg"
+                alt="Михаил Ермаков" width="270" height="260" />
+
+              <figcaption class="team-member__info">
+
+                <h3 class="team-member__name">Михаил Ермаков</h3>
+
+                <p class="team-member__position">UI Designer</p>
+
+                <ul class="team-member-socials">
+
+                  <li class="team-member-socials__item">
+
+                    <a href="#" class="social-link">
+                      <span class="visually-hidden">instagram</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-instagram"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">twitter</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-twitter"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">facebook</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-facebook"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                  <li class="team-member-socials__item">
+
+                    <a href="" class="social-link">
+                      <span class="visually-hidden">linkedin</span>
+                      <svg class="icon icon--light">
+                        <use href="./images/icons.svg#icon-small-icon-linkedin"></use>
+                      </svg>
+                    </a>
+
+                  </li>
+                </ul>
+              </figcaption>
+            </figure>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- our-team end -->
+
+    <!-- our-clients start -->
+    <section class="page-section page-section--padding">
+      <div class="container">
+
+        <h2 class="page-section__title">Постоянные клиенты</h2>
+
+        <ul class="clients">
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--ya-company">
+                <use href="./images/icons.svg#icon-clients-ya-and-co-group"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--company-group">
+                <use href="./images/icons.svg#icon-clients-company-group"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--oval-company-group">
+                <use href="./images/icons.svg#icon-clients-oval-company-group"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--foster-peters-group">
+                <use href="./images/icons.svg#icon-clients-foster-peters-group"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--brand-group">
+                <use href="./images/icons.svg#icon-clients-brand-group"></use>
+              </svg>
+            </a>
+
+          </li>
+          <li class="clients__item">
+
+            <a href="#" class="clients__link">
+              <svg class="icon-clients icon-clients--box-company-group">
+                <use href="./images/icons.svg#icon-clients-box-company-group"></use>
+              </svg>
+            </a>
+
+          </li>
+
+        </ul>
+      </div>
+    </section>
 
     <!-- our-clients end -->
   </main>
